// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App component Test Header snapshot testing 1`] = `
<div
  className="slider_header"
/>
`;

exports[`App component Test ProductContainer snapshot testing 1`] = `
<div
  className="ProductContainer"
/>
`;

exports[`App component Test searchContent snapshot testing 1`] = `
<div
  className="SearchContent"
/>
`;

exports[`App component Test shapeheader snapshot testing 1`] = `
<div
  className="ShapeHeader"
/>
`;

exports[`App component Test slider_container snapshot testing 1`] = `
<div
  className="slider_container"
/>
`;

exports[`App component Test slider_logo snapshot testing 1`] = `
<div
  className="slider_Logo"
/>
`;
